--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "husky": "^7.0.2",
     "prettier": "^2.4.1",
     "size-limit": "^5.0.3",
+    "ts-node": "^10.9.1",
     "tsdx": "^0.14.1",
     "tslib": "^2.3.1",
     "typescript": "^4.4.3"
@@ -69,8 +70,10 @@
     "@ethersproject/solidity": "5.7.0",
     "@ethersproject/strings": "5.7.0",
     "@ethersproject/transactions": "5.7.0",
+    "@ethersproject/units": "^5.7.0",
     "@ethersproject/wallet": "5.7.0",
     "@metamask/eth-sig-util": "4.0.0",
+    "axios": "^1.3.5",
     "ethereumjs-util": "6.2.1"
   },
   "resolutions": {
