--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "start": "tsdx watch",
     "build": "tsdx build",
+    "script": "ts-node",
     "test": "jest",
     "lint": "eslint . --ext js,ts,jsx,tsx",
     "prepare": "tsdx build",
