--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "@ethersproject/wallet": "5.7.0",
     "@metamask/eth-sig-util": "4.0.0",
     "axios": "^1.3.5",
-    "ethereumjs-util": "6.2.1"
+    "ethereumjs-util": "6.2.1",
+    "ethers": "^6.3.0"
   },
   "resolutions": {
     "**/node-notifier": "8.0.1",
