--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@ethersproject/wallet": "5.7.0",
     "@metamask/eth-sig-util": "4.0.0",
     "axios": "^1.3.5",
+    "dotenv": "^16.0.3",
     "ethereumjs-util": "6.2.1",
     "ethers": "^6.3.0"
   },
